generating initial  feed  rss

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "astro": "^2.7.3",
     "daisyui": "^3.1.7",
     "dayjs": "^1.11.9",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9"
