adding dynamic funding  and category

--- a/astropod.config.json
+++ b/astropod.config.json
@@ -4,15 +4,16 @@
   "link": "https://astropod.com",
   "cover": "/cover.webp",
   "banner": "/banner.webp",
-  "author": "Manuel Ernesto",
-  "owner": "Manuel Ernesto",
+  "author": "Manuel Ernesto Garcia",
+  "owner": "Manuel Ernesto Garcia",
+  "copyright": "Manuel Ernesto Garcia",
   "email": "contact.manuelernestog@gmail.com",
   "language": "en",
   "explicit": false,
   "category": "",
-  "keywords": "",
   "theme": "",
-  "donateUrl": "",
+  "fundingUrl": "",
+  "fundingText": "",
   "listenOn": {
     "spotify": "",
     "googlePodcast": "",
