creating channel basic tags for rss feed

--- a/astropod.config.json
+++ b/astropod.config.json
@@ -10,10 +10,10 @@
   "email": "contact.manuelernestog@gmail.com",
   "language": "en",
   "explicit": false,
-  "category": "",
+  "category": "Technology",
   "theme": "",
-  "fundingUrl": "",
-  "fundingText": "",
+  "fundingUrl": "/donate",
+  "fundingText": "Support Us",
   "listenOn": {
     "spotify": "",
     "googlePodcast": "",
