--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "^2.7.3",
     "daisyui": "^3.1.7",
     "dayjs": "^1.11.9",
+    "marked": "^7.0.2",
     "sharp": "^0.32.1",
     "xml2js": "^0.6.2"
   },
