--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "daisyui": "^3.1.7",
     "dayjs": "^1.11.9",
     "marked": "^7.0.2",
+    "marked-plaintext": "^0.0.2",
     "sharp": "^0.32.1",
     "xml2js": "^0.6.2"
   },
