--- a/astropod.config.json
+++ b/astropod.config.json
@@ -27,11 +27,11 @@
   },
   "social": {
     "facebook": "",
-    "twitter": "",
+    "twitter": "https://twitter.com/manuelernestog",
     "youtube": "",
     "instagram": "",
     "telegram": "",
-    "linkedin": "",
+    "linkedin": "https://www.linkedin.com/in/manuelernestogr",
     "newsletter": ""
   }
 }
