--- a/astropod.config.json
+++ b/astropod.config.json
@@ -14,6 +14,7 @@
   "theme": "",
   "fundingUrl": "/donate",
   "fundingText": "Support Us",
+  "pageSize": 10,
   "listenOn": {
     "spotify": "",
     "googlePodcast": "",
