improving page SEO

--- a/astropod.config.json
+++ b/astropod.config.json
@@ -1,5 +1,5 @@
 {
-  "name": "Astropod | Free Serverless Podcast Hosting",
+  "name": "Astropod | Free Serverless Podcast",
   "description": "Astropod is an open-source template for host your podcast for free using serverless model.",
   "link": "https://astropod.com",
   "cover": "/cover.webp",
