--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@astrojs/sitemap": "^1.3.3",
     "@astrojs/tailwind": "^3.1.3",
     "astro": "^2.7.3",
+    "astro-netlify-cms": "^0.5.3",
     "daisyui": "^3.1.7",
     "dayjs": "^1.11.9",
     "marked": "^7.0.2",
