--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -1,19 +1,22 @@
 {
-  "name": "Astropod | Free Serverless Podcast",
-  "description": "Astropod is an open-source template for host your podcast for free using serverless model.",
-  "link": "https://astropod.com",
-  "cover": "/cover.webp",
-  "banner": "/banner.webp",
-  "author": "Manuel Ernesto Garcia",
-  "owner": "Manuel Ernesto Garcia",
   "copyright": "Manuel Ernesto Garcia",
-  "email": "contact.manuelernestog@gmail.com",
-  "language": "en",
-  "explicit": false,
-  "category": ["Technology"],
   "theme": "light",
-  "fundingUrl": "/donate",
-  "fundingText": "Support Us",
+  "fundingText": "Support Astropod",
+  "author": "Manuel Ernesto Garcia",
+  "name": "Astropod | Free Serverless Podcast",
+  "banner": "/banner.webp",
   "pageSize": 15,
+  "fundingUrl": "https://manuelernestog.github.io/support-my-work/",
+  "owner": "Manuel Ernesto Garcia",
+  "explicit": false,
+  "cover": "/cover.webp",
+  "language": "en",
+  "link": "https://astropod.com",
+  "email": "contact.manuelernestog@gmail.com",
+  "description": "Astropod is a free and Open Source serverless podcast to host your podcast for free using any vendor.",
+  "category": [
+    "Technology",
+    "Business"
+  ],
   "feedSize": ""
 }
