moving astropod assets to dedicated folder

--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -4,12 +4,12 @@
   "fundingText": "Support Astropod",
   "author": "Manuel Ernesto Garcia",
   "name": "Astropod | Free Serverless Podcast",
-  "banner": "/banner.webp",
+  "banner": "/astropod/banner.webp",
   "pageSize": 15,
   "fundingUrl": "https://manuelernestog.github.io/support-my-work/",
   "owner": "Manuel Ernesto Garcia",
   "explicit": false,
-  "cover": "/cover.webp",
+  "cover": "/astropod/cover.webp",
   "language": "en",
   "link": "https://astropod.com",
   "email": "contact.manuelernestog@gmail.com",
