testing dynamic sit in astro config

--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -12,7 +12,7 @@
   "explicit": false,
   "cover": "/cover.webp",
   "language": "en",
-  "link": "https://astropod.com",
+  "link": "https://getastropod.netlify.app",
   "email": "contact.manuelernestog@gmail.com",
   "description": "Astropod is a free and Open Source serverless podcast to host your podcast for free using any vendor.",
   "category": [
