--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "astropod",
-  "description": "Astropod is a free and open-source serverless podcast template. Host your podcast for free using online third-party services.", 
+  "description": "Astropod is a free and open-source serverless podcast template. Host your podcast for free using online third-party services.",
   "type": "module",
   "author": "Manuel Ernesto Garcia",
   "version": "1.0.0",
@@ -28,6 +28,7 @@
     "xml2js": "^0.6.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "astro-robots-txt": "^0.5.0"
   }
 }
