adding demo files for new podcast

--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -1,20 +1,23 @@
 {
-  "copyright": "Manuel Ernesto Garcia",
+  "copyright": "",
   "theme": "light",
-  "fundingText": "Support Astropod",
-  "author": "Manuel Ernesto Garcia",
-  "name": "Astropod | Free Serverless Podcast",
+  "fundingText": "",
+  "author": "Author's name",
+  "name": "Podcast Name",
   "banner": "/banner.webp",
-  "favicon": "/favicon.svg",
   "pageSize": 15,
-  "fundingUrl": "https://manuelernestog.github.io/support-my-work/",
-  "owner": "Manuel Ernesto Garcia",
+  "fundingUrl": "",
+  "owner": "",
+  "favicon": "/favicon.svg",
   "explicit": false,
   "cover": "/cover.webp",
   "language": "en",
-  "link": "https://getastropod.netlify.app",
-  "email": "contact.manuelernestog@gmail.com",
-  "description": "Astropod is a free and open-source self-hosting serverless podcast solution. It supports diverse deployment services and audio hosting options and includes a customizable website deployable in a few clicks, with a personalized domain and a user-friendly CMS for effortless podcast management.",
-  "category": ["Technology", "Business"],
+  "link": "https://your-website-url.netlify.app",
+  "email": "your.email@gmail.com",
+  "description": "A short description of your podcast. We suggest creating a podcast description between 600-900 characters or 120-170 words in length.",
+  "category": [
+    "Technology",
+    "Business"
+  ],
   "feedSize": ""
 }
