--- a/.astropod/social.config.json
+++ b/.astropod/social.config.json
@@ -1,9 +1,9 @@
 {
   "facebook": "",
-  "twitter": "https://twitter.com/manuelernestog",
+  "twitter": "",
   "youtube": "",
   "instagram": "",
   "telegram": "",
-  "linkedin": "https://www.linkedin.com/in/manuelernestogr",
+  "linkedin": "",
   "newsletter": ""
 }
