changing cover format

--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -10,7 +10,7 @@
   "owner": "",
   "favicon": "/favicon.svg",
   "explicit": false,
-  "cover": "/cover.webp",
+  "cover": "/cover.jpg",
   "language": "en",
   "link": "https://your-website-url.netlify.app",
   "email": "your.email@gmail.com",
