adding github profile

--- a/.astropod/social.config.json
+++ b/.astropod/social.config.json
@@ -3,7 +3,7 @@
   "twitter": "https://twitter.com/manuelernestog",
   "youtube": "",
   "instagram": "",
-  "github": "",
+  "github": "https://github.com/manuelernestog/astropod",
   "telegram": "",
   "linkedin": "https://www.linkedin.com/in/manuelernestogr",
   "newsletter": ""
