Made changes to design

--- a/.astropod/social.config.json
+++ b/.astropod/social.config.json
@@ -1,8 +1,8 @@
 {
   "facebook": "",
-  "twitter": "",
-  "youtube": "",
-  "instagram": "",
+  "twitter": "https://twitter.com/aaron_rackley",
+  "youtube": "https://www.youtube.com/channel/UC7aqWmJqNBsZqupFP8ZGL2Q",
+  "instagram": "https://www.instagram.com/aaron_rackley/",
   "github": "",
   "telegram": "",
   "linkedin": "",
