--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -1,20 +1,20 @@
 {
-  "copyright": "",
-  "theme": "light",
+  "copyright": "All rights reserved to Aaron Rackley",
+  "theme": "winter",
   "fundingText": "",
-  "author": "Author's name",
-  "name": "Podcast Name",
+  "author": "Aaron Rackley",
+  "name": "Tech Leadership Decoded Podcast",
   "banner": "/banner.webp",
-  "pageSize": 15,
+  "pageSize": 10,
   "fundingUrl": "",
-  "owner": "",
+  "owner": "Aaron Rackley",
   "favicon": "/favicon.svg",
   "explicit": false,
-  "cover": "/cover.jpg",
+  "cover": "/cover.png",
   "language": "en",
   "link": "https://your-website-url.netlify.app",
-  "email": "your.email@gmail.com",
-  "description": "A short description of your podcast. We suggest creating a podcast description between 600-900 characters or 120-170 words in length.",
+  "email": "contact@techleadershipdecoded.com",
+  "description": "The Tech Leadership Podcast, where we unravel the intricacies of leadership in the tech industry and provide insights on how to become a top-performing leader.",
   "category": [
     "Technology",
     "Business"
