--- a/.astropod/astropod.config.json
+++ b/.astropod/astropod.config.json
@@ -4,7 +4,7 @@
   "fundingText": "",
   "author": "Author's name",
   "name": "Podcast Name",
-  "banner": "/banner.webp",
+  "banner": "../assets/banner.webp",
   "pageSize": 15,
   "fundingUrl": "",
   "owner": "",
