--- a/.astropod/listenOn.config.json
+++ b/.astropod/listenOn.config.json
@@ -6,7 +6,7 @@
   "amazonMusic": "https://music.amazon.com/podcasts/db530f60-9206-419f-8150-e60771591db6",
   "fountain": "",
   "ivoox": "",
-  "pocketcasts": "",
+  "pocketcasts": "https://pca.st/a7muh123",
   "deezer": "",
   "acastPodcasts": ""
 }
